--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 }
 
 dependencies {
+	implementation 'com.mashape.unirest:unirest-java:1.3.27'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
